--- a/app/views/pages/admin_home.html.erb
+++ b/app/views/pages/admin_home.html.erb
@@ -48,6 +48,10 @@
 </div>
 <div class="row padded">
   <div class="cell" style="width: 30%;">
+    <%= button_to "LHFE Flights", lhfe_flights_path, :method => :get %>
+    Edit/Admin LHFE Flights
+  </div>
+  <div class="cell" style="width: 30%;">
     <%= button_to "Aircraft", aircrafts_path, :method => :get %>
     Edit/Admin Aircraft
   </div>
