changed id to event_id in manifest link to get manifest working again

--- a/app/views/event_signups/manifest.html.erb
+++ b/app/views/event_signups/manifest.html.erb
@@ -39,5 +39,5 @@
 </table>
 
 <div style="text-align: center;">
-<%= button_to "Create Hold Harmless / Manifest", hold_harmless_path(params[:id]) %>
+<%= button_to "Create Hold Harmless / Manifest", hold_harmless_path(params[:event_id]) %>
 </div>
