update to datepicker format

--- a/app/views/dues_payments/_form.html.erb
+++ b/app/views/dues_payments/_form.html.erb
@@ -1,7 +1,7 @@
   <script>
   $(function() {
     $( "#dues_payment_date_paid" ).datepicker({
-     format:'Y-m-d'
+     dateFormat:"yy-mm-dd"
     });
   });
   </script>
