--- a/app/views/pages/admin_home.html.erb
+++ b/app/views/pages/admin_home.html.erb
@@ -16,6 +16,12 @@
     Edit/Admin Officer Positions
   </div>
 </div>
+<div class="row padded">
+  <div class="cell" style="width: 30%;">
+    <%= button_to "Dues Payments", dues_payments_path, :method => :get %>
+    Edit/Admin Dues Payments
+  </div>
+</div>
 
 <h2>Events &amp; Trips</h2>
 <div class="row padded">
