added member application to navigation and created button link from squadron page

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -30,6 +30,7 @@
         <li><%= link_to "PX", px_path %></li>
         <li><%= link_to "Rides", living_flight_history_experience_path %></li>
         <li><%= link_to "Squadron", pages_squadron_path %></li>
+        <li><%= link_to "Join", member_application_path %></li>
 <!--        <li><a href="sponsorship.php">Sponsorship</a></li> -->
         </ul>
     </li>
