--- a/app/views/pages/squadron.html.erb
+++ b/app/views/pages/squadron.html.erb
@@ -17,7 +17,13 @@
 
 <p>We are always looking for new members. There is a lot of work to do, but we have fun doing it. And it's not all work in the hangar. Members have the opportunity travel with the Dog to airshows. </p>
 
-<p>If you would like to join the squadron, membership is open to all CAF members. If you are not yet a member of the CAF, you can learn more about the benefits of membership, and download an application form, at the <a href="http://commemorativeairforce.org/membership/membership-options">CAF's membership web page</a>.</p>
+<p>If you would like to join the squadron, membership is open to all CAF members. You can fill out our online membership application.</p>
+
+<div style="text-align: center;">
+  <%= button_to "Membership Application", member_application_path, :method => :get %>
+</div>
+
+<p>If you are not yet a member of the CAF, you can learn more about the benefits of membership, and download an application form, at the <a href="http://commemorativeairforce.org/membership/membership-options">CAF's membership web page</a>.</p>
 
 <h2>Base of Operations</h2>
 
