added model to track lhfe riders

--- a/app/views/pages/admin_home.html.erb
+++ b/app/views/pages/admin_home.html.erb
@@ -58,6 +58,10 @@
     Edit/Admin LHFE Flights
   </div>
   <div class="cell" style="width: 30%;">
+    <%= button_to "LHFE Riders", lhfe_riders_path, :method => :get %>
+    Edit/Admin LHFE Riders
+  </div>
+  <div class="cell" style="width: 30%;">
     <%= button_to "Aircraft", aircrafts_path, :method => :get %>
     Edit/Admin Aircraft
   </div>
