--- a/app/assets/stylesheets/screen/web_style.css
+++ b/app/assets/stylesheets/screen/web_style.css
@@ -445,6 +445,20 @@ margin-top: 0;
 	vertical-align: top;
     }
 
+table.table_border tr {
+  background: #fff; 
+	border-bottom: #d6d68b;
+	border-right:  #d6d68b;
+	border-width: 0 1px 1px 0; 
+	border-style: none solid solid none;
+	padding: 3px;
+	vertical-align: top;
+}
+
+table.table_border tr:nth-child(2n+3) {
+  background: #feffea;
+}
+
 .table2 { 
     margin: 10px;
     border: none;
