updated link to sw logo

--- a/app/views/pages/_hp_sponsors.html.erb
+++ b/app/views/pages/_hp_sponsors.html.erb
@@ -18,7 +18,7 @@
         </tr> 
         <tr> 
           <td><div align="center"><a href="http://www.ps-engineering.com/"><img src="/assets/pse_logo.jpg" width="141" height="38" /></a></div></td> 
-          <td><div align="center"><a href="http://www.ps-engineering.com/"><img src="https://devildogsquadron.com/assets/SWAerospace_Logo.png" width="147" height="42" /></a></div></td> 
+          <td><div align="center"><a href="https://www.swaerospace.com/"><img src="https://devildogsquadron.com/assets/SWAerospace_Logo.png" width="147" height="42" /></a></div></td> 
           <td><div align="center"><a href="http://www.xmwxweather.com/"><img src="/assets/xm_wx.jpg" width="88" height="40" /></a></div></td> 
         </tr> 
         <tr> 
