--- a/app/views/lhfe_riders/_form.html.erb
+++ b/app/views/lhfe_riders/_form.html.erb
@@ -15,7 +15,7 @@
 
     <div class="field">
       <%= f.label :event_id, "Event" %><br />
-      <%= f.collection_select :event_id, Event.all, :id, :event_date, options = {:order => 'event_date ASC', :prompt => true}, html_options = {:class => "styled-select"} %>
+      <%= f.collection_select :event_id, Event.reverse.all, :id, :event_date, options = {:order => 'event_date ASC', :prompt => true}, html_options = {:class => "styled-select"} %>
     </div>
   <div class="field">
     <%= f.label :ride_date %><br />
