--- a/app/views/members/_versions.html.erb
+++ b/app/views/members/_versions.html.erb
@@ -18,7 +18,11 @@
       <tr class="<%= cycle('odd_row', 'even_row') %>">
         <td><%= version.index %></td>
         <td><%= version.created_at.strftime("%b %d, %Y") %></td>
-        <td><%= find_version_author_name(version) %></td>
+        <td>
+          <% if version.whodunnit? %>
+          <%= find_version_author_name(version) %>
+          <% end %>
+        </td>
         <td><%= version.event.humanize %></td>
         <td><%= link_to 'Diff', diff_member_version_path(member, version) %></td>
         <td><%= link_to 'Rollback', rollback_member_version_path(member, version), :method => 'put' %></td>
