--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,63 +1,10 @@
-
-<div id="header">
-
-<div id="header_logo">
-
-<%= link_to image_tag("logo.png", :width => "213", :height => "140", :border => "0", :alt => "Devil Dog Squadron"), "/" %>
-
-<!-- CLOSE header_logo CONTAINER -->
+<div class="menu-link">
+  <%= link_to image_tag("nose_art.png", :alt => "Devil Dog Squadron"), "/" %>
+  <div style="margin-top: 0.75em;"><a href="#nav">menu</a></div>
 </div>
-<%= image_tag("headers/" + random_image) %>
-<div id="navbox">
-
-<ul id="nav">
-
-
-    <li><%= link_to 'Home', "/" %></li>
-    <li><%= link_to "Calendar", calendar_path %>
-        <ul>
-        <li><%= link_to "News Items", news_index_path %></li>
-        </ul>
-    </li>
-    <li><%= link_to "History", pages_PBJs_path %></a>
-        <ul>
-        <li><%= link_to "PBJs", pages_PBJs_path %></li>
-        <li><%= link_to "VMB 612", pages_VMB612_path %></li>
-        </ul>
-    </li>
-    <li><%= link_to "Support", px_path %>
-        <ul>
-        <li><%= link_to "PX", px_path %></li>
-        <li><%= link_to "Rides", living_flight_history_experience_path %></li>
-        <li><%= link_to "Squadron", pages_squadron_path %></li>
-        <li><%= link_to "Join", member_application_path %></li>
-<!--        <li><a href="sponsorship.php">Sponsorship</a></li> -->
-        </ul>
-    </li>
-    <li><%= link_to "Photos & Videos", galleries_path %>
-        <ul>
-        <li><%= link_to "Photo Galleries", galleries_path %></li>
-        <li><%= link_to "Video Gallery", video_gallery_path %></li>
-        </ul>
-    </li>
-        <li><%= link_to "Members", pages_member_home_path %>
-        <% if user_signed_in? %>
-          <ul>
-            <li><%= link_to 'Documents', squadron_documents_path %></li>
-            <li><%= link_to 'Members List', members_list_path %></li>
-            <li><%= link_to 'Officers/Terms', terms_path %></li>
-            <li><%= link_to "Account/Profile", account_path(User.find(current_user).member.id) %></li>
-            <li><%= link_to 'Password', edit_user_registration_path %></li>
-            <li><%= link_to 'Bulletin Board', posts_path %></li>
-            <li><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></li>
-          <% if current_user.roles.any? {|role| role.name == "admin"  or role.name == "superuser" } %>
-            <li><%= link_to "Admin", pages_admin_home_path %></li>
-          <% end %>
-          </ul>
-        <% end %></li>
-</ul>
-
-<!-- CLOSE NAV CONTAINER -->
+<div class="logo">
+  <%= link_to image_tag("nose_art.png", :alt => "Devil Dog Squadron"), "/" %>
 </div>
-
+<div class="header-image hero">
+  <%= image_tag("headers/" + random_image) %>
 </div>
