--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -5,42 +5,38 @@
   <%= stylesheet_link_tag    "application" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
-
-  <%= favicon_link_tag '/apple-icon-57x57.png', :rel => 'apple-touch-icon', :sizes => '57x57' %>
-  <%= favicon_link_tag '/apple-icon-60x60.png', :rel => 'apple-touch-icon', :sizes => '60x60' %>
-  <%= favicon_link_tag '/apple-icon-72x72.png', :rel => 'apple-touch-icon', :sizes => '72x72' %>
-  <%= favicon_link_tag '/apple-icon-76x76.png', :rel => 'apple-touch-icon', :sizes => '76x76' %>
-  <%= favicon_link_tag '/apple-icon-114x114.png', :rel => 'apple-touch-icon', :sizes => '114x114' %>
-  <%= favicon_link_tag '/apple-icon-120x120.png', :rel => 'apple-touch-icon', :sizes => '120x120' %>
-  <%= favicon_link_tag '/apple-icon-144x144.png', :rel => 'apple-touch-icon', :sizes => '144x144' %>
-  <%= favicon_link_tag '/apple-icon-152x152.png', :rel => 'apple-touch-icon', :sizes => '152x152' %>
-  <%= favicon_link_tag '/apple-icon-180x180.png', :rel => 'apple-touch-icon', :sizes => '180x180' %>
-  <%= favicon_link_tag '/android-icon-192x192.png', :rel => 'icon', :type=> 'image/png', :sizes => '192x192' %>
-  <%= favicon_link_tag '/favicon-32x32.png', :rel => 'icon', :type => 'image/png', :sizes => '32x32' %>
-  <%= favicon_link_tag '/favicon-96x96.png', :rel => 'icon', :type => 'image/png', :sizes => '96x96' %>
-  <%= favicon_link_tag '/favicon-16x16.png', :rel => 'icon', :type => 'image/png', :sizes => '16x16' %>
-
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1">
 </head>
 <body>
 
-<div id="page">
+<div id="container">
 
-<%= render 'layouts/header' %>
+<header>
+  <%= render 'layouts/header' %>
+</header>
 
-<div id="main-area">
-
-<% if notice %>
-<p id="notice" style="padding-top: 6em; margin-left: 2em;"><%= notice %></p>
-<% end %>
-
-<%= yield %>
+<nav>
+    <%= render 'layouts/nav' %>
+</nav>
 
 
-<%= render 'layouts/footer' %>
+<div class="main">
 
+  <% if notice %>
+    <p id="notice"><%= notice %></p>
+  <% end %>
+  
+  <article>
+    <%= yield %>
+  </article>
 
-<!-- Close main-area -->
 </div>
+
+<footer>
+    <%= render 'layouts/footer' %>
+</footer>
+
+
 
 <!-- Close page -->
 </div>
