--- a/app/assets/stylesheets/screen/web_style.css
+++ b/app/assets/stylesheets/screen/web_style.css
@@ -30,7 +30,6 @@ time, mark, audio, video {
   vertical-align: baseline;
   }
 
-
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
@@ -73,6 +72,7 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
 
 fieldset {
   border: none;
@@ -579,6 +579,249 @@ header .header-image img {
   }
 
 .px-item {
+
+  padding: 0.25em 0 0;
+  color: #fff;
+  background: #cc0000;
+  }
+
+.calendar_date-ii {
+  text-align: center;
+  font-size: 1em;
+  font-weight: bold;
+  margin: 3px 0 0 0;
+  padding-top: 0px;
+  color: #000;
+  }
+
+.calendar_date-ii.large {
+  font-size: 4em;
+  margin: 0.25em 0 0 0;
+}
+/*----------------------------------------------------
+Set first level order small
+-------------------------------------------------------*/
+header {
+  -webkit-box-ordinal-group: 1;   /* OLD - iOS 6-, Safari 3.1-6 */
+  -moz-box-ordinal-group: 1;      /* OLD - Firefox 19- */
+  -ms-flex-order: 1;              /* TWEENER - IE 10 */
+  -webkit-order: 1;               /* NEW - Chrome */
+  order: 1;                       /* NEW, Spec - Opera 12.1, Firefox 20+ */
+  }
+
+.main {
+  -webkit-box-ordinal-group: 2;
+  -moz-box-ordinal-group: 2;
+  -ms-flex-order: 2;
+  -webkit-order: 2;
+  order: 2;
+  }
+
+nav {
+  -webkit-box-ordinal-group: 3;
+  -moz-box-ordinal-group: 3;
+  -ms-flex-order: 3;
+  -webkit-order: 3;
+  order: 3;
+  }
+
+footer {
+  -webkit-box-ordinal-group: 4;
+  -moz-box-ordinal-group: 4;
+  -ms-flex-order: 4;
+  -webkit-order: 4;
+  order: 4;
+  }
+
+/*----------------------------------------------------
+Formatting Small Screen
+-------------------------------------------------------*/
+
+#container {
+  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox;      /* TWEENER - IE 10 */
+  display: -webkit-flex;     /* NEW - Chrome */
+  display: flex;
+  -ms-flex-direction: column;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  margin: 0 auto;
+  width: 100%;
+  background: #fff;
+  }
+
+header {
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -ms-flex-direction: column;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  padding-top: 4.4em;
+  }
+
+header .logo {
+  display: none;
+  }
+
+header .header-image {
+  -webkit-order: 1;
+  -ms-flex-order: 1;
+  order: 1;
+  width: 100%;
+  }
+
+header .header-image img {
+  width: 100%
+  }
+
+.main {
+/*  -webkit-order: 2;
+  -ms-order: 2;
+  order: 2; */
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: column;
+  -ms-flex-flow: column;
+  flex-flow: column;
+  margin-bottom: 1em;
+  padding: 0 1em;
+  }
+
+.menu-link {
+  position: fixed;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: row;
+  -ms-flex-flow: row;
+  flex-flow: row;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: flex-start;
+  justify-content: flex-start;
+  z-index: 1;
+  width: 100%;
+  padding: 0.5em 0 0.5em 0em;
+  top: 0;
+  left: 0;
+  background: #1d2644;
+  margin: 0 0 0 0;
+  }
+
+.menu-link a {
+  display: block;
+  text-transform: uppercase;
+  color: #fff;
+  text-decoration: none;
+  width: 55px;
+  margin: 0 1em;
+  }
+
+.menu-link img {
+  width: 100%;
+  vertical-align: middle;
+  }
+
+.signup_box {
+  background: #EDD68A;
+  margin: 0.75em 0.75em;
+  padding: 0.5em 1em;
+  border: 1px solid #b78d03;
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+}
+
+.signup_buttons {
+  display: block;
+  margin: 0 auto;
+  }
+
+.signup_buttons form, .signup_buttons div {
+  display: inline;
+  }
+
+/*----------------------------------------------------
+   Homepage boxes styles
+-------------------------------------------------------*/
+
+.home-box {
+  padding: 0.5em;
+  border-bottom: 1px solid #1d2644;
+  }
+
+.updates {
+  -webkit-order: 1;
+  -ms-order: 1;
+  order: 1;
+  }
+
+.calendar {
+  -webkit-order: 2;
+  -ms-order: 2;
+  order: 2;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: column;
+  -ms-flex-flow: column;
+  flex-flow: column;
+  }
+
+.updates {
+  -webkit-order: 2;
+  -ms-order: 2;
+  order: 2;
+  }
+
+.about {
+  -webkit-order: 3;
+  -ms-order: 3;
+  order: 3;
+  }
+
+.feed {
+  -webkit-order: 4;
+  -ms-order: 4;
+  order: 4;
+  }
+
+.sponsors {
+  -webkit-order: 5;
+  -ms-order: 5;
+  order: 5;
+  }
+
+.galleries {
+  -webkit-order: 6;
+  -ms-order: 6;
+  order: 6;
+  }
+
+.sponsors-board {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: row wrap;
+  -ms-flex-flow: row wrap;
+  flex-flow: row wrap;
+  -webkit-justify-content: space-around;
+  -ms-flex-pack: justify;
+  justify-content: space-around;
+  }
+
+.ftd_row {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: column;
+  -ms-flex-flow: column;
+  flex-flow: column;
+  }
+
+.px-item {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
@@ -593,6 +836,36 @@ header .header-image img {
   -webkit-border-radius: 5px 5px 0px 0px;
   box-shadow: 4px -3px 8px rgba(0,0,0,.15);
   }
+
+.px-item > img {
+  width: 100%;
+  }
+
+.item-info {
+
+  }
+
+.payment-info {
+  margin: 1em 0 0;
+  text-align: right;
+  }
+
+.gallery-row {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: column;
+  -ms-flex-flow: column;
+  flex-flow: column;
+  border: 1px solid #ccc;
+  padding: 1em;
+  margin: 1em auto;
+  border-radius: 2px;
+  -moz-border-radius: 0px;
+  -webkit-border-radius: 5px 5px 0px 0px;
+  box-shadow: 4px -3px 8px rgba(0,0,0,.15);
+  }
+
 
 .px-item > img {
   width: 100%;
@@ -709,9 +982,97 @@ nav > ul > li > a:link {
   z-index: 2;
   }
 
+
+.photo-cell {
+  text-align: center;
+  }
+
+.photo-cell > a > img {
+  width: 100%;
+  }
+
+.content {
+  padding: 0.5em;
+  }
+
+footer {
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  padding: 1em;
+  background: #fff;
+  border-bottom: 1px solid #ccc;
+  color: #b78d03;
+  margin: 0;
+  padding: 1em;
+  background: #1d2644;
+  }
+
+footer a:link, footer a:visited {
+  color: #b78d03;
+  }
+
+.copyright {
+  text-align: center;
+  }
+
+/*----------------------------------------------------
+   Navigation
+-------------------------------------------------------*/
+
+nav {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  }
+
+nav > ul {
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -ms-flex-direction: column;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  list-style: none;
+  margin: 2em 0 0;
+  padding-top: 0;
+  background: #666666; /* Old browsers */
+  background: -moz-linear-gradient(top,  #666666 0%, #4f4f4f 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#666666), color-stop(100%,#4f4f4f)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  #666666 0%,#4f4f4f 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  #666666 0%,#4f4f4f 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  #666666 0%,#4f4f4f 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  #666666 0%,#4f4f4f 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#666666', endColorstr='#4f4f4f',GradientType=0 ); /* IE6-9 */
+  }
+
+nav > ul > li {
+  flex: 0 1 auto;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  font-size: 1.5em;
+  transition: all linear 0.1s;
+  border-bottom: 1px solid #000;
+  }
+
+nav > ul > li > a:link {
+  display: block;
+  padding: 0.5em 1em;
+  cursor: pointer;
+  color: #fff;
+  text-decoration: none;
+  z-index: 2;
+  }
+
 nav > ul > li > a:visited {
   color: #fff;
   }
+
 
 .location {
   display: block;
@@ -728,6 +1089,7 @@ nav > ul > li > a:visited {
   -webkit-box-shadow: 0px 0px 0px 3px rgba(0,145,64,1);
 -moz-box-shadow: 0px 0px 0px 3px rgba(0,145,64,1);
 box-shadow: 0px 0px 0px 3px rgba(0,145,64,1);
+
 
 nav > ul > li > a:hover {
   background: #3f3f3f; /* Old browsers */
@@ -866,6 +1228,7 @@ footer {
 /*----------------------------------------------------
    Navigation
 -------------------------------------------------------*/
+
 .login-bar {
   background: #1d2644;
   display: block;
@@ -887,7 +1250,10 @@ nav {
   width: 100%;
 }
   
+
 nav > ul {
+  position: fixed;
+  width: 100%;
 
   -ms-flex-direction: row;
   -webkit-flex-direction: row;
@@ -901,6 +1267,7 @@ nav > ul {
   }
 
 
+
 .event_graphic {
 margin: 0 0 1em 0;
   }
@@ -908,6 +1275,40 @@ margin: 0 0 1em 0;
 .event_graphic img {
 width: 100%;
 }
+
+nav > ul > li > a:hover {
+  background: #eacf6e; /* Old browsers */
+  background: -moz-linear-gradient(top,  #eacf6e 1%, #b78d03 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,#eacf6e), color-stop(100%,#b78d03)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  #eacf6e 1%,#b78d03 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  #eacf6e 1%,#b78d03 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  #eacf6e 1%,#b78d03 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  #eacf6e 1%,#b78d03 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eacf6e', endColorstr='#b78d03',GradientType=0 ); /* IE6-9 */
+  color: #fff;
+  }
+
+nav > ul > li > ul {
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -ms-flex-direction: column;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  list-style: none;
+  margin: 0 0 0 1em;
+  display: none;
+  width: 200px;
+  position: absolute;
+  background: #1d2644;
+  border-left: 1px solid #000;
+  border-right: 1px solid #000;
+  border-bottom: 1px solid #000;
+  -webkit-box-shadow: 7px 7px 15px 0px rgba(66,66,66,0.5);
+  -moz-box-shadow: 7px 7px 15px 0px rgba(66,66,66,0.5);
+  box-shadow: 7px 7px 15px 0px rgba(66,66,66,0.5);
+  }
+
 
 nav > ul > li > a:hover {
   background: #eacf6e; /* Old browsers */
@@ -1087,7 +1488,112 @@ nav#top-nav {
   order: 2;
   background: #b78d03;
   position: relative;
+
+
   }
+
+#main, #main-home {
+  -webkit-order: 3;
+  -ms-order: 3;
+  order: 3;
+  display: -webkit-flex; 
+  display: -ms-flexbox; 
+  display: flex; 
+  -webkit-flex-flow: row wrap; 
+  -ms-flex-flow: row wrap; 
+  flex-flow: row wrap; 
+  -webkit-justify-content: space-around; 
+  -ms-flex-pack: center; 
+  -justify-content: space-around; 
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  padding: 1em 0 2em 0;
+  background: #f0f0f0;
+  }
+
+nav#top-nav > ul {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  flex-wrap: wrap;
+
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+
+  }
+  
+    nav#top-nav > ul > li {
+      flex: 0 1 auto;
+      margin: 0;
+      padding: 0;
+      width: 160px;
+    }
+    
+      nav#top-nav > ul > li:hover {
+        background: #ddd;
+      }
+      
+      nav#top-nav > ul > li a {
+        background: linear-gradient(to bottom,rgba(102,102,102,1) 0,rgba(0,0,0,0.96) 100%);;
+        border: none;
+        border-radius: 0 0 2px 2px;
+        box-shadow: 0 3px 1px rgba(0,0,0,.05);
+        display: none;
+        font-size: 1em;
+        position: absolute;
+        width: 195px;
+      }
+      
+        nav#top-nav > ul > li:hover a {
+          display: block;
+        }
+        
+        nav#top-nav > ul > li a > ul {
+          list-style-type: none;  
+        }
+        
+          nav#top-nav > ul > li a > ul > li {
+            margin: 0;
+            padding: 0;
+          }
+          
+            nav#top-nav > ul > li a > ul > li > a {
+              color: rgba(255,255,255,.9);
+              display: block;  
+              font-size: .75rem;
+              padding: .25em 1.5em;
+              text-decoration: none;
+            }
+            
+              nav#top-nav > ul > li a > ul > li:hover > a {
+                background-color: rgba(0,0,0,.15);  
+              }
+  
+      nav#top-nav > ul > li > a {
+        align-items: flex-start;
+        color: #fff;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+        font-size: 1.25em;
+        font-weight: 200;
+        letter-spacing: 1px;
+        max-width: 160px;
+        padding: 1em 1em;
+        text-decoration: none;
+        text-shadow: 0 1px 1px rgba(0,0,0,.1);
+        transition: all linear 0.1s;
+      }
+
+
+
+
 
 #main, #main-home {
   -webkit-order: 3;
