--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -19,6 +19,26 @@
 </p>
 
 <p>
+  <b>Airport Name:</b>
+  <%= @location.airport_name %>
+</p>
+
+<p>
+  <b>ICAO Identifier:</b>
+  <%= @location.icao_identifier %>
+</p>
+
+<p>
+  <b>City:</b>
+  <%= @location.city %>
+</p>
+
+<p>
+  <b>State:</b>
+  <%= @location.state %>
+</p>
+
+<p>
   <b>Description:</b>
   <%= @location.description %>
 </p>
