--- a/app/assets/stylesheets/screen/web_style.css
+++ b/app/assets/stylesheets/screen/web_style.css
@@ -1,3 +1,7 @@
+/*
+green => #52782a
+*/
+
 a:link {
         color: #003399;
         /*text-decoration: none;*/
@@ -714,10 +718,15 @@ padding-bottom: 2em;
   clear: both;
   margin: 4em 0 0 0.25em;
   padding: 0.25em 0.5em;
+  background: #009140;
+  color: #fff;
   font-style: italic;
   font-weight: bold;
-  border: 1px solid #999;
+  border: 2px solid #fff;
   border-radius: 5px;
+  -webkit-box-shadow: 0px 0px 0px 3px rgba(0,145,64,1);
+-moz-box-shadow: 0px 0px 0px 3px rgba(0,145,64,1);
+box-shadow: 0px 0px 0px 3px rgba(0,145,64,1);
   }
 
 .photo_viewer {
@@ -1009,3 +1018,12 @@ input.safety-button {
 .pagination-nav {
   text-align: center;
   }
+
+.month-subheader {
+  font-size: 1.5em;
+  color: #fff;
+  text-align: center;
+  margin: 1em auto;
+  padding: 0.75em 0;
+  background: #52782a;
+}
