updates to calendar to show rides opportunities

--- a/app/assets/stylesheets/screen/web_style.css
+++ b/app/assets/stylesheets/screen/web_style.css
@@ -1027,3 +1027,9 @@ input.safety-button {
   padding: 0.75em 0;
   background: #52782a;
 }
+
+.rides-teaser {
+  font-weight: bold;
+  text-align: center;
+  font-style: italic;
+}
