--- a/app/assets/stylesheets/screen/web_style.css
+++ b/app/assets/stylesheets/screen/web_style.css
@@ -195,6 +195,13 @@ footer, footer p {
   text-align: center;
   }
 
+.boxsizingBorder {
+  width: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  }
+
 /*----------------------------------------------------
    table styles
 -------------------------------------------------------*/
@@ -1472,9 +1479,9 @@ header {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-flex-flow: row;
-  -ms-flex-flow: row;
-  flex-flow: row;
+  -webkit-flex-flow: column;
+  -ms-flex-flow: column;
+  flex-flow: column;
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
