--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,28 +11,23 @@
 
 <div id="container">
 
-<header>
-  <%= render 'layouts/header' %>
-</header>
-
 <nav>
   <%= render 'layouts/nav' %>
 </nav>
 
+<header>
+  <%= render 'layouts/header' %>
+</header>
 
 <div class="main">
-
-  <% if notice %>
-    <p id="notice"><%= notice %></p>
-  <% end %>
   
   <article>
+    <% if notice %>
+      <div id="notice"><%= notice %></div>
+    <% end %>
+
     <%= yield %>
   </article>
-
-  <aside>
-    <%= yield :sidebar %>
-  </aside>
 
 </div>
 
