--- a/app/views/menus/_form.html.erb
+++ b/app/views/menus/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :description %><br />
-    <%= f.text_area :description %>
+    <%= f.text_area :description, :rows => '7', :class => 'boxsizingBorder' %>
   </div>
   <div class="actions">
     <%= f.submit %>
