--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -63,7 +63,7 @@
       <% end %>
 
 <% if event.rides_available? %>
-<p class='rides-teaser'><%= link_to "Rides available at this event !", living_flight_history_experience_path %></p>
+<p class='rides-teaser'><%= image_tag 'dd_illustration_sm.jpg' %><br /><%= link_to "Devil Dog Rides available at this event !", living_flight_history_experience_path %></p>
 
 	<% if !event.lhfe_flights.empty? %>
 	  <p>Scheduled ride times:</p>
