--- a/app/assets/stylesheets/screen/web_style.css
+++ b/app/assets/stylesheets/screen/web_style.css
@@ -412,6 +412,7 @@ nav {
   -ms-flex-order: 3;
   -webkit-order: 3;
   order: 3;
+  clear: both;
   }
 
 footer {
@@ -1345,4 +1346,16 @@ input, textarea {
   font-weight: bold;
   text-align: center;
   font-style: italic;
+}
+
+.hero { 
+  background: url('../fly_teaser.jpg'); 
+  background-size: cover;
+  width: 100%;
+  min-height: 700px;
+  margin-top: 84px;
+  }
+
+.hero p {
+
 }
